--- a/_/css/mystyles.css
+++ b/_/css/mystyles.css
@@ -125,6 +125,9 @@ a:active {text-decoration: none; color: #0082BE;}
 }
 .padding {padding: 8px;}
 .img {padding:4px;}
+.img-responsive {width: 100%; height: auto; display: block;}
+.img-responsive-half {width: 50%; height: auto; display: block;}
+.center-block {display: block; margin-left: auto; margin-right: auto;}
 .radius {border-radius: 4px;}
 .page{padding: 50px 0;}
 .page h2{text-align: center; margin-bottom: 30px;}
