--- a/_/css/mystyles.css
+++ b/_/css/mystyles.css
@@ -128,6 +128,16 @@ a:active {text-decoration: none; color: #0082BE;}
 .img-responsive {width: 100%; height: auto; display: block;}
 .img-responsive-half {width: 50%; height: auto; display: block;}
 .center-block {display: block; margin-left: auto; margin-right: auto;}
+// floats
+.pull-left { float: left !important;}
+.pull-right {float: right !important;}
+// Usage as a mixins
+.element { .pull-left(); }
+.another-element { .pull-right(); }
+// clearfix
+.clearfix() { &:before, &:after { content: " "; display: table; } &:after { clear: both; }}
+// Usage as a mixin
+.element { .clearfix(); }
 .radius {border-radius: 4px;}
 .page{padding: 50px 0;}
 .page h2{text-align: center; margin-bottom: 30px;}
